# swift-openstack-ansible-os_developer

./: .gitreview  CONTRIBUTING.rst  README.rst  setup.cfg  tox.ini
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
tasks/: install-apt.yml  install-yum.yml  main.yml  swift_calculate_addresses.yml  swift_init_common.yml  swift_init_systemd.yml  swift_install.yml  swift_install_source.yml  swift_post_install.yml  swift_pre_install.yml  swift_proxy_hosts.yml  swift_pypy_setup.yml  swift_rings.yml  swift_rings_build.yml  swift_rings_distribute.yml  swift_rings_post_distribution_check.yml  swift_service_setup.yml  swift_storage_hosts_account.yml  swift_storage_hosts_container.yml  swift_storage_hosts_object.yml  swift_sync_post_install.yml
templates/: account-server-2.conf.j2  account-server-replicator.conf.j2  account-server.conf.j2  container-server-2.conf.j2  container-server-replicator.conf.j2  container-server.conf.j2  internal-client.conf.j2  object-server-2.conf.j2  object-server-replicator.conf.j2  object-server.conf.j2  proxy-server.conf.j2  ring.contents.j2  rsyncd.conf.j2  swift-systemd-init.j2  swift-systemd-tempfiles.j2  swift-systemd-tmpfiles.j2  swift-upstart-init.j2  swift_rings.py.j2  swift_rings_check.py.j2
tests/: ansible-role-requirements.yml  benchmark-upgrade.yml  inventory  inventory_MR_A  inventory_MR_B  os_swift-overrides-MR-A.yml  os_swift-overrides-MR-B.yml  os_swift-overrides-pypy.yml  os_swift-overrides.yml  swift-overrides-MR-A.yml  swift-overrides-MR-B.yml  test-install-previous-swift.yml  test-swift-functional.yml  test.yml  (+5 more)
(+29 files in other folders)
